--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "type": "module",
   "dependencies": {
-    "commander": "^14.0.1"
+    "@types/readline-sync": "^1.4.8",
+    "commander": "^14.0.1",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "@types/node": "^24.4.0",
